Document PPDG/src/objects/Asset_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account_with_IBB_Number__c</fullName>
        <formula>Account_with_IBB__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account with IBB Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_with_IBB__c</fullName>
        <label>Account with IBB</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipLabel>Account Holders</relationshipLabel>
        <relationshipName>Account_Holders</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_EBS_ID__c</fullName>
        <label>Customer EBS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_EBS_ID_from_profile__c</fullName>
        <formula>Prospect_Customer__r.EBS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer EBS ID  from profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivation_Reason__c</fullName>
        <description>C0560</description>
        <label>Deactivation Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <externalId>true</externalId>
        <label>EBS ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>C0560</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Account Holder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <formula>IF(Primary_Account_Holder__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_flag_is_correct__c</fullName>
        <formula>IF(Primary_Account_Holder__c, 

IF(Customer_EBS_ID_from_profile__c = Account_with_IBB__r.Primary_SFDC_Account__r.EBS_ID__c , true, false) 
, 

IF(Customer_EBS_ID_from_profile__c = Account_with_IBB__r.Primary_SFDC_Account__r.EBS_ID__c , false, true) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary flag is correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer__c</fullName>
        <label>Prospect/Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Holders</relationshipLabel>
        <relationshipName>Account_Holders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship_To_Primary_Applicant1__c</fullName>
        <label>Relationship To Primary Applicant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_To_Primary_Applicant__c</fullName>
        <formula>TEXT( Prospect_Customer__r.Relationship_To_Primary_Applicant__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship To Primary Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signatory_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signatory Group</label>
        <referenceTo>Signatory_Group__c</referenceTo>
        <relationshipLabel>Account Holders</relationshipLabel>
        <relationshipName>Account_Holders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Holder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Holder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Holders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>